# BR2-simulator

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  setup.py
BR2/: free_custom_systems.py  free_simulator.py
GJM/: br2_simulator_3_rods.py  count_distance.py  rod_library_GJM.json  surfacejoinFaceByFace_1_26.py  surfacejoinFaceByFace_Preprocess_1_26.py
GJM/11.30/: 11.10 SurfaceJointFaceByFace.py  free_custom_systems.py  free_simulator.py  plot_video_GJM.py  surface_connection_parallel_rod_numba.py
GJM/2.1/: plot_video_GJM.py  surfacejoinFaceByFace_1_26.py
GJM/2.11/: br2_simulator_3_rods.py  plot_tip_pos_actuation.py  rod_library_GJM.json  single_br2_GJM.json  test_external_force.py
GJM/2.15/: bend_extreme_test.py  calculate_rotation_degree.py  draw_tip_pose.py  extreme_test.py  plot_twist_angle.py
GJM/2.9/: br2_simulator_3_rods.py  draw_histgram_delta_l.py
br2/: constants.py  custom_activation.py  custom_callback.py  custom_constraint.py  custom_dissipation.py  custom_modules.py  custom_pivot.py  environment.py  free_custom_systems.py  free_simulator.py  legacy_surface_connection_parallel_rod_numba.py  linalg.py  post_processing.py  rotations.py  set_environment_br2.py  surface_connection.py  surface_connection_parallel_rod_numba.py  visual_twist_angle.py
br2/callbacks/: __init__.py  blender.py  free_callback.py
br2/configurations/: __init__.py  assembly_configuration.py  protocol.py  rod_library_configuration.py
br2/memory_block/: memory_block_free_rod.py
br2/modules/: __init__.py  base_system.py  block_connections.py  memory_block.py
br2/rod/: cosserat_rod.py
br2/visualize/: __init__.py  post_processing.py  posture.py  strain.py  twist_angle.py
docs/: conf.py  index.rst  intro.rst
docs/api/: simulator.rst
docs/guide/: examples.rst  how_to_set_simulation.md
examples/: run.py
sample_assembly/: double_br2_v1.json  single_br2_v1.json  triple_br2_v1.json
sample_database/: sample_rod_library.json
validation_single_free/: optimize_free.py  optimize_free_bend.py  plot_single_free_validation.py  readme.md  run_con.py  run_free_bend.py  run_free_twist.py  sim.py
validation_single_free/assembly/: single.json
validation_single_free/data/: single_free_bend.csv  single_free_twist.csv
validation_single_free/rod_library/: .standard_18.json.swo  standard.json
validations/: fdmosopt.py  loader.py  optimize_free_bend.py  optimize_free_twist.py  run_double_br2.py  run_free_bend.py  run_free_twist.py  run_single_br2_twist.py
validations/assembly/: double_br2.json  free_bend.json  free_twist_18cm_60_0.json  free_twist_v2.json  single_br2_twist.json  (+1 more)
(+2 files in other folders)
