[tool.poetry]
name = "br2"
version = "0.1.1"
description = "Cosserat Rod based FREE assembly simulator"
authors = ["Seung Hyun Kim <skim0119@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pyelastica = ">=0.3.1"
tqdm = "^4.65.0"
matplotlib = "^3.7.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-mock = "^3.10.0"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx-book-theme = "^1.0.1"
numpydoc = "^1.5.0"
myst-nb = "^0.17.2"
sphinx-autodoc-typehints = "^1.23.0"
readthedocs-sphinx-search = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
