[project]
name = "br2"
version = "0.1.1"
description = "Cosserat Rod based FREE assembly simulator"
authors = [
    {name = "Seung Hyun Kim", email = "skim0119@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tqdm",
    "matplotlib",
    "pydantic",
    "dmosopt @ git+https://github.com/iraikov/dmosopt",
    "pyelastica",
    "bsr",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]
docs = [
    "sphinx",
    "sphinx-book-theme",
    "numpydoc",
    "myst-nb",
    "sphinx-autodoc-typehints",
    "readthedocs-sphinx-search",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
pyelastica = { git = "https://github.com/GazzolaLab/PyElastica", branch = "update-0.3.3" }
bsr = { git = "https://github.com/GazzolaLab/Blender-Soft-Rod" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
